Tools/synthParser.py
# Generated from D:/Projekty/learningPytest/Kompilatorki/Synth\synth.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class synthParser ( Parser ):

    grammarFileName = "synth.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'elif'", "'for'", "'while'", 
                     "'return'", "'in'", "'range'", "'final'", "'print'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'bool'", "'int'", 
                     "'float'", "'sound'", "'synth'", "'seq'", "'Sine'", 
                     "'LFO'", "'SuperSaw'", "'Fastsine'", "'RCOsc'", "'Pause'", 
                     "'freq'", "'mul'", "'add'", "<INVALID>", "<INVALID>", 
                     "'NCHANNEL'", "'DUR'", "'and'", "'or'", "'=='", "'!='", 
                     "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'append'", "'@'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "','", "'='", "';'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "ELIF", "FOR", "WHILE", 
                      "RETURN", "IN", "RANGE", "FINAL", "PRINT", "BOOL", 
                      "INT", "FLOAT", "BOOL_TYPE", "INT_TYPE", "FLOAT_TYPE", 
                      "SOUND_TYPE", "SYNTH_TYPE", "SEQUENCE_TYPE", "SINE", 
                      "LFO", "SUPERSAW", "FASTSINE", "RCOSC", "PAUSE", "FREQ", 
                      "MUL", "ADD", "SOUND", "CHANNEL", "NCHANNEL", "DUR", 
                      "AND", "OR", "EQUALS", "NOT_EQUALS", "GT", "LT", "GOET", 
                      "LOET", "ADDITION", "SUBTRACTION", "MULTIPLICATION", 
                      "DIVISION", "MODULO", "APPEND", "DURATION_INDICATOR", 
                      "LP", "RP", "LSB", "RSB", "LB", "RB", "COMMA", "IS", 
                      "SEMICOLON", "IDENTIFIER", "SPACE" ]

    RULE_program = 0
    RULE_function = 1
    RULE_return_block = 2
    RULE_function_final = 3
    RULE_nchannel_definition = 4
    RULE_duration_definition = 5
    RULE_block = 6
    RULE_line = 7
    RULE_statement = 8
    RULE_if_statement = 9
    RULE_while_statement = 10
    RULE_for_statement = 11
    RULE_range_statement = 12
    RULE_print_statement = 13
    RULE_function_call = 14
    RULE_parameters = 15
    RULE_expression = 16
    RULE_logic_expression = 17
    RULE_math_expression = 18
    RULE_sound_expression = 19
    RULE_sequence_expression = 20
    RULE_bool_op = 21
    RULE_compare_op = 22
    RULE_add_op = 23
    RULE_mult_op = 24
    RULE_var_definition = 25
    RULE_var_definition_assignment = 26
    RULE_channel_addition = 27
    RULE_synth_name = 28
    RULE_synth_params = 29
    RULE_synth_constructor = 30
    RULE_sound_constructor = 31
    RULE_sequence_constructor = 32
    RULE_type = 33

    ruleNames =  [ "program", "function", "return_block", "function_final", 
                   "nchannel_definition", "duration_definition", "block", 
                   "line", "statement", "if_statement", "while_statement", 
                   "for_statement", "range_statement", "print_statement", 
                   "function_call", "parameters", "expression", "logic_expression", 
                   "math_expression", "sound_expression", "sequence_expression", 
                   "bool_op", "compare_op", "add_op", "mult_op", "var_definition", 
                   "var_definition_assignment", "channel_addition", "synth_name", 
                   "synth_params", "synth_constructor", "sound_constructor", 
                   "sequence_constructor", "type" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    ELIF=3
    FOR=4
    WHILE=5
    RETURN=6
    IN=7
    RANGE=8
    FINAL=9
    PRINT=10
    BOOL=11
    INT=12
    FLOAT=13
    BOOL_TYPE=14
    INT_TYPE=15
    FLOAT_TYPE=16
    SOUND_TYPE=17
    SYNTH_TYPE=18
    SEQUENCE_TYPE=19
    SINE=20
    LFO=21
    SUPERSAW=22
    FASTSINE=23
    RCOSC=24
    PAUSE=25
    FREQ=26
    MUL=27
    ADD=28
    SOUND=29
    CHANNEL=30
    NCHANNEL=31
    DUR=32
    AND=33
    OR=34
    EQUALS=35
    NOT_EQUALS=36
    GT=37
    LT=38
    GOET=39
    LOET=40
    ADDITION=41
    SUBTRACTION=42
    MULTIPLICATION=43
    DIVISION=44
    MODULO=45
    APPEND=46
    DURATION_INDICATOR=47
    LP=48
    RP=49
    LSB=50
    RSB=51
    LB=52
    RB=53
    COMMA=54
    IS=55
    SEMICOLON=56
    IDENTIFIER=57
    SPACE=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_final(self):
            return self.getTypedRuleContext(synthParser.Function_finalContext,0)


        def EOF(self):
            return self.getToken(synthParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(synthParser.FunctionContext)
            else:
                return self.getTypedRuleContext(synthParser.FunctionContext,i)


        def getRuleIndex(self):
            return synthParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = synthParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << synthParser.BOOL_TYPE) | (1 << synthParser.INT_TYPE) | (1 << synthParser.FLOAT_TYPE) | (1 << synthParser.SOUND_TYPE) | (1 << synthParser.SYNTH_TYPE) | (1 << synthParser.SEQUENCE_TYPE))) != 0):
                self.state = 68
                self.function()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.function_final()
            self.state = 75
            self.match(synthParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(synthParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(synthParser.IDENTIFIER, 0)

        def LP(self):
            return self.getToken(synthParser.LP, 0)

        def RP(self):
            return self.getToken(synthParser.RP, 0)

        def return_block(self):
            return self.getTypedRuleContext(synthParser.Return_blockContext,0)


        def var_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(synthParser.Var_definitionContext)
            else:
                return self.getTypedRuleContext(synthParser.Var_definitionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(synthParser.COMMA)
            else:
                return self.getToken(synthParser.COMMA, i)

        def getRuleIndex(self):
            return synthParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = synthParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.type_()
            self.state = 78
            self.match(synthParser.IDENTIFIER)
            self.state = 79
            self.match(synthParser.LP)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << synthParser.BOOL_TYPE) | (1 << synthParser.INT_TYPE) | (1 << synthParser.FLOAT_TYPE) | (1 << synthParser.SOUND_TYPE) | (1 << synthParser.SYNTH_TYPE) | (1 << synthParser.SEQUENCE_TYPE))) != 0):
                self.state = 80
                self.var_definition()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==synthParser.COMMA:
                    self.state = 81
                    self.match(synthParser.COMMA)
                    self.state = 82
                    self.var_definition()
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 90
            self.match(synthParser.RP)
            self.state = 91
            self.return_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(synthParser.LB, 0)

        def RETURN(self):
            return self.getToken(synthParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(synthParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(synthParser.SEMICOLON, 0)

        def RB(self):
            return self.getToken(synthParser.RB, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(synthParser.LineContext)
            else:
                return self.getTypedRuleContext(synthParser.LineContext,i)


        def getRuleIndex(self):
            return synthParser.RULE_return_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_block" ):
                listener.enterReturn_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_block" ):
                listener.exitReturn_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_block" ):
                return visitor.visitReturn_block(self)
            else:
                return visitor.visitChildren(self)




    def return_block(self):

        localctx = synthParser.Return_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_return_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(synthParser.LB)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << synthParser.IF) | (1 << synthParser.FOR) | (1 << synthParser.WHILE) | (1 << synthParser.PRINT) | (1 << synthParser.BOOL_TYPE) | (1 << synthParser.INT_TYPE) | (1 << synthParser.FLOAT_TYPE) | (1 << synthParser.SOUND_TYPE) | (1 << synthParser.SYNTH_TYPE) | (1 << synthParser.SEQUENCE_TYPE) | (1 << synthParser.CHANNEL) | (1 << synthParser.IDENTIFIER))) != 0):
                self.state = 94
                self.line()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(synthParser.RETURN)
            self.state = 101
            self.expression()
            self.state = 102
            self.match(synthParser.SEMICOLON)
            self.state = 103
            self.match(synthParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_finalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(synthParser.FINAL, 0)

        def nchannel_definition(self):
            return self.getTypedRuleContext(synthParser.Nchannel_definitionContext,0)


        def COMMA(self):
            return self.getToken(synthParser.COMMA, 0)

        def duration_definition(self):
            return self.getTypedRuleContext(synthParser.Duration_definitionContext,0)


        def block(self):
            return self.getTypedRuleContext(synthParser.BlockContext,0)


        def getRuleIndex(self):
            return synthParser.RULE_function_final

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_final" ):
                listener.enterFunction_final(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_final" ):
                listener.exitFunction_final(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_final" ):
                return visitor.visitFunction_final(self)
            else:
                return visitor.visitChildren(self)




    def function_final(self):

        localctx = synthParser.Function_finalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_final)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(synthParser.FINAL)
            self.state = 106
            self.nchannel_definition()
            self.state = 107
            self.match(synthParser.COMMA)
            self.state = 108
            self.duration_definition()
            self.state = 109
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Nchannel_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NCHANNEL(self):
            return self.getToken(synthParser.NCHANNEL, 0)

        def IS(self):
            return self.getToken(synthParser.IS, 0)

        def INT(self):
            return self.getToken(synthParser.INT, 0)

        def getRuleIndex(self):
            return synthParser.RULE_nchannel_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNchannel_definition" ):
                listener.enterNchannel_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNchannel_definition" ):
                listener.exitNchannel_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNchannel_definition" ):
                return visitor.visitNchannel_definition(self)
            else:
                return visitor.visitChildren(self)




    def nchannel_definition(self):

        localctx = synthParser.Nchannel_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nchannel_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(synthParser.NCHANNEL)
            self.state = 112
            self.match(synthParser.IS)
            self.state = 113
            self.match(synthParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Duration_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DUR(self):
            return self.getToken(synthParser.DUR, 0)

        def IS(self):
            return self.getToken(synthParser.IS, 0)

        def INT(self):
            return self.getToken(synthParser.INT, 0)

        def getRuleIndex(self):
            return synthParser.RULE_duration_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDuration_definition" ):
                listener.enterDuration_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDuration_definition" ):
                listener.exitDuration_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDuration_definition" ):
                return visitor.visitDuration_definition(self)
            else:
                return visitor.visitChildren(self)




    def duration_definition(self):

        localctx = synthParser.Duration_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_duration_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(synthParser.DUR)
            self.state = 116
            self.match(synthParser.IS)
            self.state = 117
            self.match(synthParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(synthParser.LB, 0)

        def RB(self):
            return self.getToken(synthParser.RB, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(synthParser.LineContext)
            else:
                return self.getTypedRuleContext(synthParser.LineContext,i)


        def getRuleIndex(self):
            return synthParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = synthParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(synthParser.LB)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << synthParser.IF) | (1 << synthParser.FOR) | (1 << synthParser.WHILE) | (1 << synthParser.PRINT) | (1 << synthParser.BOOL_TYPE) | (1 << synthParser.INT_TYPE) | (1 << synthParser.FLOAT_TYPE) | (1 << synthParser.SOUND_TYPE) | (1 << synthParser.SYNTH_TYPE) | (1 << synthParser.SEQUENCE_TYPE) | (1 << synthParser.CHANNEL) | (1 << synthParser.IDENTIFIER))) != 0):
                self.state = 120
                self.line()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(synthParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(synthParser.StatementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(synthParser.If_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(synthParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(synthParser.For_statementContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(synthParser.Print_statementContext,0)


        def getRuleIndex(self):
            return synthParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = synthParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_line)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [synthParser.BOOL_TYPE, synthParser.INT_TYPE, synthParser.FLOAT_TYPE, synthParser.SOUND_TYPE, synthParser.SYNTH_TYPE, synthParser.SEQUENCE_TYPE, synthParser.CHANNEL, synthParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.statement()
                pass
            elif token in [synthParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.if_statement()
                pass
            elif token in [synthParser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.while_statement()
                pass
            elif token in [synthParser.FOR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.for_statement()
                pass
            elif token in [synthParser.PRINT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.print_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(synthParser.SEMICOLON, 0)

        def var_definition(self):
            return self.getTypedRuleContext(synthParser.Var_definitionContext,0)


        def var_definition_assignment(self):
            return self.getTypedRuleContext(synthParser.Var_definition_assignmentContext,0)


        def channel_addition(self):
            return self.getTypedRuleContext(synthParser.Channel_additionContext,0)


        def getRuleIndex(self):
            return synthParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = synthParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 135
                self.var_definition()
                pass

            elif la_ == 2:
                self.state = 136
                self.var_definition_assignment()
                pass

            elif la_ == 3:
                self.state = 137
                self.channel_addition()
                pass


            self.state = 140
            self.match(synthParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(synthParser.IF, 0)

        def LP(self, i:int=None):
            if i is None:
                return self.getTokens(synthParser.LP)
            else:
                return self.getToken(synthParser.LP, i)

        def logic_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(synthParser.Logic_expressionContext)
            else:
                return self.getTypedRuleContext(synthParser.Logic_expressionContext,i)


        def RP(self, i:int=None):
            if i is None:
                return self.getTokens(synthParser.RP)
            else:
                return self.getToken(synthParser.RP, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(synthParser.BlockContext)
            else:
                return self.getTypedRuleContext(synthParser.BlockContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(synthParser.ELIF)
            else:
                return self.getToken(synthParser.ELIF, i)

        def ELSE(self):
            return self.getToken(synthParser.ELSE, 0)

        def getRuleIndex(self):
            return synthParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = synthParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(synthParser.IF)
            self.state = 143
            self.match(synthParser.LP)
            self.state = 144
            self.logic_expression(0)
            self.state = 145
            self.match(synthParser.RP)
            self.state = 146
            self.block()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==synthParser.ELIF:
                self.state = 147
                self.match(synthParser.ELIF)
                self.state = 148
                self.match(synthParser.LP)
                self.state = 149
                self.logic_expression(0)
                self.state = 150
                self.match(synthParser.RP)
                self.state = 151
                self.block()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==synthParser.ELSE:
                self.state = 158
                self.match(synthParser.ELSE)
                self.state = 159
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(synthParser.WHILE, 0)

        def LP(self):
            return self.getToken(synthParser.LP, 0)

        def logic_expression(self):
            return self.getTypedRuleContext(synthParser.Logic_expressionContext,0)


        def RP(self):
            return self.getToken(synthParser.RP, 0)

        def block(self):
            return self.getTypedRuleContext(synthParser.BlockContext,0)


        def getRuleIndex(self):
            return synthParser.RULE_while_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_statement" ):
                listener.enterWhile_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_statement" ):
                listener.exitWhile_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_statement" ):
                return visitor.visitWhile_statement(self)
            else:
                return visitor.visitChildren(self)




    def while_statement(self):
